[package]
name = "qoollo-logstash-rs"
version = "0.2.0"
description = "Logstash sender"
repository = "https://github.com/qoollo/rust-log4rs-logstash"
homepage = "https://github.com/qoollo/rust-log4rs-logstash"
documentation = "https://docs.rs/logstash-rs"
keywords = ["logstash", "log", "logger", "logging"]
categories = ["development-tools::debugging"]
license = "MIT"
authors = ["Qoollo", "Vladimir Stepanenko <vovac12@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
thiserror = "1.0"
native-tls = { version = "0.2", optional = true }
rustls-crate = { package = "rustls", version = "0.20", optional = true }
webpki-roots = { version = "0.22", optional = true }

[features]
default = []
tls = ["native-tls"]
rustls = ["rustls-crate", "webpki-roots"]
